Update title, categories, and content in "Monthly Commit: Leveling Up the Toolchain" post for clarity and improved readability. Add TL;DR, refine structure, and streamline formatting.